--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "precss": "^1.4.0",
     "gulp-watch": "^4.3.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-postcss": "^6.1.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
