--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "postcss": "^5.1.0",
     "postcss-cssnext": "^2.7.0",
-    "precss": "^1.4.0",
+    "precss": "^1.4.0"
   },
   "devDependencies": {
     "gulp-postcss": "^6.1.1"
